--- a/src/BaldurToolkit.App/BaldurToolkit.App.csproj
+++ b/src/BaldurToolkit.App/BaldurToolkit.App.csproj
@@ -1,12 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <PackageId>BaldurToolkit.App</PackageId>
     <AssemblyName>BaldurToolkit.App</AssemblyName>
     <AssemblyTitle>BaldurToolkit.App</AssemblyTitle>
     <Description>BaldurToolkit App System Library.</Description>
-    <Copyright>Copyright (C) 2010-2017 Baldur Team</Copyright>
+    <Copyright>Copyright (C) 2010-2018 Baldur Team</Copyright>
     <Authors>Baldur Team</Authors>
+    <VersionPrefix>0.6.0</VersionPrefix>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7</LangVersion>
     <NoWarn>$(NoWarn);SA0001;SA1600;SA1602;SA1633;SA1652</NoWarn>
