--- a/src/BaldurToolkit.Entities/BaldurToolkit.Entities.csproj
+++ b/src/BaldurToolkit.Entities/BaldurToolkit.Entities.csproj
@@ -5,8 +5,9 @@
     <AssemblyName>BaldurToolkit.Entities</AssemblyName>
     <AssemblyTitle>BaldurToolkit.Entities</AssemblyTitle>
     <Description>Simple entity system.</Description>
-    <Copyright>Copyright (C) 2010-2017 Baldur Team</Copyright>
+    <Copyright>Copyright (C) 2010-2018 Baldur Team</Copyright>
     <Authors>Baldur Team</Authors>
+    <VersionPrefix>0.6.0</VersionPrefix>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7</LangVersion>
     <NoWarn>$(NoWarn);SA0001;SA1600;SA1602;SA1633;SA1652</NoWarn>
