--- a/src/BaldurToolkit.Network.Libuv/BaldurToolkit.Network.Libuv.csproj
+++ b/src/BaldurToolkit.Network.Libuv/BaldurToolkit.Network.Libuv.csproj
@@ -9,7 +9,7 @@
     <Authors>Baldur Team</Authors>
     <VersionPrefix>0.6.0</VersionPrefix>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>7</LangVersion>
+    <LangVersion>8</LangVersion>
     <NoWarn>$(NoWarn);SA0001;SA1600;SA1602;SA1633;SA1652</NoWarn>
     <TreatWarningsAsErrors Condition=" '$(Configuration)' == 'Release' ">true</TreatWarningsAsErrors>
   </PropertyGroup>
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta006" PrivateAssets="All" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
